crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_contains.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "items": [
    1,
    2,
    3
  ],
  "list": [
    1,
    2,
    3
  ],
  "has_2": true,
  "has_5": false,
  "idx": 1
}
