crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_contains_index_of.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    2
  ],
  "r1": true,
  "r2": false,
  "r3": 1,
  "r4": 3,
  "r5": -1
}
