crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_filter.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "numbers": [
    1,
    2,
    3,
    4,
    5
  ],
  "evens": [
    2,
    4
  ]
}
