crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_filter_indexed.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1636
expression: eval_pkl(source)
---
{
  "items": [
    10,
    20,
    30,
    40,
    50
  ],
  "evens": [
    10,
    30,
    50
  ]
}
