crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_filter_non_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    1,
    2,
    3
  ],
  "r2": [],
  "r3": [
    1,
    2,
    3
  ],
  "r4": []
}
