crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_find_last_or_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    4,
    5
  ],
  "r1": 5,
  "r2": null,
  "r3": null
}
